# debris-to-blame

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  ROADMAP.md  pyproject.toml
d2b/: __init__.py  agent.py  conference.py  detective.py  domains.py  env.py  faults.py  fixtures.py  incident.py  reconcile.py  reconcile_long.py  replay.py  review.py  rollout.py  scheduling.py  stats.py  tools.py  trajectory.py  validate.py
docs/: novelty.md  results.md
experiments/: attr_baselines.py  attr_common.py  attr_score.py  attribute.py  codex_export.py  codex_grader_compare.py  conf_attr_score.py  conf_recover_score.py  conf_score.py  exp01_degradation.py  exp02_attribution.py  exp04_recovery.py  gen_auditor_manifest.py  gen_long_states.py  grid.py  long_horizon_score.py  matrix_score.py  step.py
handoffs/: 0001-scaffold.md  0002-dependability-reframe.md  0003-subscription-native.md  0004-m1-injector.md  0005-codex-audit.md  0006-m1b-domains.md  0007-m2-first-cell.md  0008-m2-tempting-signal.md  0009-m2-attribution-blame-gap.md  0010-m4-recovery-loop-closed.md  0011-writeup-headline-figure.md  0012-stats-wilson-cis.md  0013-breadth-sham-tiers.md  0014-conference-multistep-task.md  0015-review3-closed-interactive.md  0016-interactive-experiment.md  0017-decontamination-honest-regime.md  0018-crossdomain-deception-gap.md  0019-codex-audit-fixes.md  README.md  TEMPLATE.md
results/: auditor_matrix.json  conf_attr_baselines.json  conf_attribution.json  conf_attribution_multidomain.json  conf_degrade_grid.json  conf_degrade_incident.json  conf_degrade_reconcile.json  (+10 more)
(+373 files in other folders)
