[project]
name = "debris-to-blame"
version = "0.0.0"
description = "Controlled fault injection as causal ground truth for agent failure attribution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Guglielmo Cimolai", email = "guglielmo.cimolai@icloud.com" }]
keywords = ["failure-attribution", "context-rot", "agent-observability", "tool-use", "llm-agents", "fault-injection"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
api = [
    "anthropic>=0.40",     # Batch API + prompt caching for attributor/judge passes
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/gimocimo/debris-to-blame"
Repository = "https://github.com/gimocimo/debris-to-blame"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["d2b"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests that hit API calls or full experiment runs (run with -m slow)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
